# StationAPI

./: .all-contributorsrc  .dockerignore  .env  .env.prod.sample  .env.test  .gitignore  .gitmodules  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.prod  Makefile  README.md  api_config.yaml  app.yaml  build.gradle  build.rs  cloudbuild.dev.yaml  cloudbuild.staging.yaml  cloudbuild.yaml  compose.prod.yml  compose.yml  docker-compose.prod.yml  docker-compose.yml  elixir_buildpack.config  mix.exs  newrelic.js  package-lock.json  package.json  secrets.sample.yaml  settings.gradle  sqlx-data.json
.cargo/: config.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/: labeler.yml  pr-labeler.yml  pull_request_template.md
.sqlx/: query-00887c17ebb6b0e40d9e95270b349bec37066450399f71f26eaef2f2ae14e854.json  query-010f984ff9bd4926b9d11630bb8f323aac71086bf2ed023dde0490b4fa6edc65.json  query-015cf48f36fd48f733bc51a23d3b8a7a4fd990db4f16e10390f2cfcdbb386eec.json  query-029c12609293c9232a44baaee5d495e6c3e8bb3561b9db1c40c7c860f7aa4cb8.json  query-02f782ee3c9c59211ba7ee6cf92b3ab36d414b1c5523852dd5ef910e94937fa3.json  query-041f6331df6e2bbc38fe99ad777e0cb10c6a83b4a14daa8b0590cb5168fb624e.json  query-045d6abd9431630288c9f77b770cc7b1db8069eded3a0939609d71adeaac5c62.json  query-05b8f83dfb6fa1c118cce0cd9e18d6d2d17708ce616c665eac712b16ae9e76ac.json  query-0a1c6e15355fdf6363a083a43fec27a04b91b946ae7fdc192a721f9b6923e690.json  query-0a6eeedb9e88645a1a9a9afdcd35bd78386c7caa4bda09571da41c8495279e84.json  query-0ab98c6fad8adf87cf6ebd80429a7e9c33584e7060b6a9b8e9cb95c5f3217716.json  query-0d7777686571612cb55fac346c23409006060ebfda2aabd866ad81fd94178c6e.json  query-0ddeec38a7436c6b9fb0d0442a2bed112b9a6c2b97f31a9bb29cc1fefe7dbbb0.json  query-0ef31fb6aa0af47d05b926770e8cce6440d9619976c564f25dcd19928106697f.json  query-0f2fe335469aa59f0e9aa15770a0ef638fe1e99b587d9706bf59108b0c85696e.json  query-0f95f2a4901ef6cce88de69182fddf9dc0a6b304eec704adf60ee5c9f453dc63.json  query-10a74f116191f0fe934bf01f5167d7f08f7f033349592a4f4c5519042a6b651e.json  query-110f6726ac9be5df1c7471257d6b20bd9c40381c1bb1f41aef7769cb082455ca.json  query-117391f808a22600c4ef6155aba2bbbfb37ca50e9a764006610e231a8e8e447c.json  query-1463822668657eb09adcc9aae19a9d9213497ed454cd077c8cc805f8dffd58e3.json  query-17234250cbd9e12142d5fddbc5697a4587155f07beb5abc2ddbd06f19aca9829.json  query-193824fce100a1c49362bd6553d4312d28076dad70d81e39071ee63328dc8777.json  (+288 more)
config/: config.exs  dev.exs  (+3 more)
stationapi/: Cargo.toml  build.rs
stationapi/.github/workflows/: detect-stop-patterns.yml
stationapi/.sqlx/: query-01a96a6f40ab08c532b4e7f3cc493906213e6ec80d495a2fe569ccf1d94b4834.json  query-0bd668d4bac8ff6e3df4eff660f112043461a1461884f8461dfc6235208825a6.json  query-0fb645ff8092d11063efd37f7f902777d843d1ddda01b469a1a1fd32e9194470.json  query-16b301ca5df4be89b803987fd71cc41b55e885ccd4bd3ca4bcae1f7336742d3f.json  query-1b281ca6a016be38164092cbd0302be60fa5c6a86e3d71dd34a4c968fcd09255.json  query-217b99932d995eff26a2eb16abab5dd05c27b6b77f78f169ca2049f45cf432ce.json  query-58899fb950e311e87a33db5142b914a376a60c6cd2650c3723fbdde78beaff12.json  query-7428cc69d3756a749121a1ad5eee1603aa5e7ee3fc30071a142f9a15502da031.json  query-7bc61cc6e96fcdaf7e9a05c8f76582a0470a8b5f5e61ffcd0609ce4c45300afb.json  query-a9f8fbbbf6b257d9061c28cb6525e0208b11df87effcdb310331c2a6909eedce.json  query-b6463341617bed8525b73a1a23c658639570f13ab86ba2aae6a1a41a37adee71.json  query-c08e746f79517801e8a235b4cbc4377f9addfa50f0a0b9ac5e2dacad55fb9a97.json  query-d3f9188af86adfa1b16ea4ce538299c4e0942aeadc2497c7752b6b98fb78087f.json
stationapi/docs/: stop-pattern-detection-setup.md
stationapi/src/: config.rs  domain.rs  import.rs  infrastructure.rs  lib.rs  main.rs  presentation.rs
stationapi/src/domain/: arrival_estimation.rs  entity.rs  error.rs  ipa.rs  normalize.rs  repository.rs
stationapi/src/domain/entity/: company.rs  connection.rs  gtfs.rs  line.rs  line_symbol.rs  misc.rs  route.rs  station.rs  station_number.rs  train_type.rs
stationapi/src/domain/repository/: company_repository.rs  connection_repository.rs  gtfs_repository.rs  line_repository.rs  routes_repository.rs  station_repository.rs  train_type_repository.rs
stationapi/src/infrastructure/: company_repository.rs  connection_repository.rs  error.rs  gtfs_repository.rs  line_repository.rs  routes_repository.rs  station_repository.rs  train_type_repository.rs
stationapi/src/presentation/: error.rs
stationapi/src/presentation/controller/: grpc.rs
stationapi/src/presentation/middleware/: metrics.rs
stationapi/src/proto/: mod.rs
stationapi/src/stop_pattern/: detector.rs  github_issue.rs  mod.rs  odpt_client.rs
stationapi/src/use_case/: dto.rs  error.rs
stationapi/src/use_case/dto/: company.rs  line.rs  line_symbol.rs  simulation.rs  station.rs  station_number.rs  train_type.rs  tts.rs
stationapi/src/use_case/interactor/: query.rs
stationapi/src/use_case/traits/: query.rs
(+268 files in other folders)
