[package]
name = "stationapi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stationapi"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { version = "0.3.17", features = ["tracing-log", "fmt"] }
dotenv = "0.15.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "bigdecimal",
] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.10.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
moka = { version = "0.11", features = ["future"] }
hyper = "0.14.27"
tower = "0.4.13"
http = "0.2.9"
prost = "0.12.1"
serde = { version = "1.0.189", features = ["derive"] }
async-trait = "0.1.73"
tracing = "0.1.39"

[build-dependencies]
tonic-build = { version = "0.10.1", features = ["prost"] }
