[package]
name = "stationapi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
async-trait = "0.1.68"
dotenv = "0.15.0"
prost = "0.13.3"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
    "derive",
] }
tokio = { version = "1.28.0", features = ["full"] }
tonic = "0.12.3"
tonic-web = "0.12.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.71"
thiserror = "1.0.40"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"
csv = "1.3.1"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
# テスト用の依存関係はここに追加
# 既存の依存関係（tokio, sqlx等）はテストでも使用可能

# テスト用の feature flags
[features]
default = []
# 統合テスト用 feature（データベース接続が必要なテスト）
integration-tests = []
